testdata/typechecker/error/arrays/ArrayTest-err4.java
int main() {
            int[] b;
            boolean c;
            b = new int[4]; 
            b[2] = c; // TE
		return 0;
}

